k8s-235/apps/postgres-operator/overlays/prod/patches/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  labels:
    application: postgres-operator-ui
  name: postgres-operator-ui
  namespace: postgres-operator
  annotations:
    kubernetes.io/ingress.class: "traefik"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.middlewares: traefik-forward-auth@kubernetescrd
spec:
  tls:
  - hosts:
    - postgres.k8s.235.tdude.co
    secretName: postgres-k8s-235-tdude-co-tls
  rules:
  - host: postgres.k8s.235.tdude.co
    http:
      paths:
      - backend:
          service:
            name: postgres-operator-ui
            port:
              number: 80
        path: /
        pathType: ImplementationSpecific
